<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dado_primario"
        android:orderInCategory="100"
        android:title="@string/menu_primario"
        app:showAsAction="never" />

    <item
        android:id="@+id/array_strings"
        android:orderInCategory="100"
        android:title="@string/menu_array_strings"
        app:showAsAction="never" />

    <item
        android:id="@+id/aluno"
        android:orderInCategory="100"
        android:title="@string/menu_aluno"
        app:showAsAction="never" />

    <item
        android:id="@+id/array_alunos"
        android:orderInCategory="100"
        android:title="@string/menu_array_alunos"
        app:showAsAction="never" />
</menu>
