<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_aluno_nome"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/aluno_edittext_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_aluno_curso"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/aluno_edittext_curso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/array_alunos_button_chamar_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_primary_data_activity_btn_chamar_servico" />

    <ListView
        android:id="@+id/array_alunos_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
